--- a/jade/alerts.jade
+++ b/jade/alerts.jade
@@ -6,7 +6,8 @@
         h4 Hold On!
         span That page is not avalible yet.
   .row-fluid
-    .span8.offset2
+    .span6.offset3
       .alert.fade.in
         strong Warning
-        span :  This page is under heavy construction, little content is complete. ~DJ
+        span :  This page is under heavy construction, little content is complete.
+        span.pull-right ~DJ
