--- a/jade/navbar.jade
+++ b/jade/navbar.jade
@@ -5,7 +5,7 @@
           span.icon-bar
           span.icon-bar
           span.icon-bar
-        a.brand(href='/') dedmons
+        a.brand(href='./') dedmons
         .nav-collapse.navbar-responsive-collapse.collapse
           ul.nav
             li.active
