--- a/jade/navbar.jade
+++ b/jade/navbar.jade
@@ -8,15 +8,20 @@
         a.brand(href='./') dedmons
         .nav-collapse.navbar-responsive-collapse.collapse
           ul.nav
-            li.active
+            -var klass = ( typeof(home) === 'undefined' ? '':'active')
+            li(class=klass)
               a(href='./') Home
             li.dropdown
               a.dropdown-toggle(href='#', data-toggle='dropdown') Assignments
                 b.caret
               ul.dropdown-menu
-                li: a.pna(href='#') Assignment 1
+                -var klass = ( typeof(asn1) === 'undefined' ? '':'active')
+                li.active: a(href='./assignment1.html') Assignment 1
+                -var klass = ( typeof(asn2) === 'undefined' ? '':'active')
                 li: a.pna(href='#') Assignment 2
+            -var klass = ( typeof(about) === 'undefined' ? '':'active')
             li
               a.pna(href='#') About
+            -var klass = ( typeof(contact) === 'undefined' ? '':'active')
             li
               a.pna(href='#') Contact
