Got site back up to status from last nights losses

--- a/jade/alerts.jade
+++ b/jade/alerts.jade
@@ -1,13 +1,12 @@
 .container-fluid
   .row-fluid#pageNotAvalible(style='display: none')
     .span4.offset4
-      .alert.alert-block.alert-error.fade.in
+      .alert.alert-block.alert-error.fade.in.text-center
         button.alert-close-btn(type='button', class='close') &times;
         h4 Hold On!
         span That page is not avalible yet.
   .row-fluid
     .span6.offset3
-      .alert.fade.in
+      .alert.fade.in.text-center
         strong Warning
         span :  This page is under heavy construction, little content is complete.
-        span.pull-right ~DJ
