--- a/jade/view_assignment1.jade
+++ b/jade/view_assignment1.jade
@@ -1,14 +1,124 @@
 extends layout
 
 block content
+  asn1 = 1
   include navbar
   include alerts
   .container-fluid
     .row-fluid
-      .span2.well
-        ul.nav.nav-list
-          li.nav-header Assignment 1
-          li: a(href='#overview') Overview
-          li: a(href='#pics') Screen Shots
-          li: a(href='#ack') Acknowledgements
-          li: a(href='#download') Download Links
+      .span2
+        .well.sidebar-nav-affix-top
+          ul.nav.nav-list
+            li.nav-header Assignment 1
+            li: a(href='#overview') Overview
+            li: a(href='#pics') Screen Shots
+            li: a(href='#ack') Acknowledgements
+            li: a(href='#download') Download Links
+      .span10
+        #part1
+        h3 Part1
+        p
+          |Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
+          |Aenean lacinia bibendum nulla sed consectetur. Curabitur blandit
+          |tempus porttitor. Nullam quis risus eget urna mollis ornare vel eu leo.
+          |Donec id elit non mi porta gravida at eget metus. Integer posuere erat
+          |a ante venenatis dapibus posuere velit aliquet.
+        p
+          |Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
+          |Vestibulum id ligula porta felis euismod semper. Sed posuere
+          |consectetur est at lobortis. Morbi leo risus, porta ac consectetur ac,
+          |vestibulum at eros. Aenean eu leo quam. Pellentesque ornare sem
+          |lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus
+          |commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
+          |amet risus.
+        p
+          |Aenean lacinia bibendum nulla sed consectetur. Lorem ipsum dolor sit
+          |amet, consectetur adipiscing elit. Donec ullamcorper nulla non metus
+          |auctor fringilla. Maecenas faucibus mollis interdum. Maecenas faucibus
+          |mollis interdum. Donec sed odio dui.
+        p
+          |Donec sed odio dui. Vestibulum id ligula porta felis euismod semper.
+          |Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
+          |Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque
+          |penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+          |Cras mattis consectetur purus sit amet fermentum. Praesent commodo
+          |cursus magna, vel scelerisque nisl consectetur et.
+        p
+          |Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
+          |Aenean lacinia bibendum nulla sed consectetur. Curabitur blandit
+          |tempus porttitor. Nullam quis risus eget urna mollis ornare vel eu leo.
+          |Donec id elit non mi porta gravida at eget metus. Integer posuere erat
+          |a ante venenatis dapibus posuere velit aliquet.
+        p
+          |Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
+          |Vestibulum id ligula porta felis euismod semper. Sed posuere
+          |consectetur est at lobortis. Morbi leo risus, porta ac consectetur ac,
+          |vestibulum at eros. Aenean eu leo quam. Pellentesque ornare sem
+          |lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus
+          |commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
+          |amet risus.
+        p
+          |Aenean lacinia bibendum nulla sed consectetur. Lorem ipsum dolor sit
+          |amet, consectetur adipiscing elit. Donec ullamcorper nulla non metus
+          |auctor fringilla. Maecenas faucibus mollis interdum. Maecenas faucibus
+          |mollis interdum. Donec sed odio dui.
+        p
+          |Donec sed odio dui. Vestibulum id ligula porta felis euismod semper.
+          |Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
+          |Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque
+          |penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+          |Cras mattis consectetur purus sit amet fermentum. Praesent commodo
+          |cursus magna, vel scelerisque nisl consectetur et.p
+          |Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
+          |Aenean lacinia bibendum nulla sed consectetur. Curabitur blandit
+          |tempus porttitor. Nullam quis risus eget urna mollis ornare vel eu leo.
+          |Donec id elit non mi porta gravida at eget metus. Integer posuere erat
+          |a ante venenatis dapibus posuere velit aliquet.
+        #part2
+        h3 Part 2
+        p
+          |Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
+          |Vestibulum id ligula porta felis euismod semper. Sed posuere
+          |consectetur est at lobortis. Morbi leo risus, porta ac consectetur ac,
+          |vestibulum at eros. Aenean eu leo quam. Pellentesque ornare sem
+          |lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus
+          |commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
+          |amet risus.
+        p
+          |Aenean lacinia bibendum nulla sed consectetur. Lorem ipsum dolor sit
+          |amet, consectetur adipiscing elit. Donec ullamcorper nulla non metus
+          |auctor fringilla. Maecenas faucibus mollis interdum. Maecenas faucibus
+          |mollis interdum. Donec sed odio dui.
+        p
+          |Donec sed odio dui. Vestibulum id ligula porta felis euismod semper.
+          |Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
+          |Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque
+          |penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+          |Cras mattis consectetur purus sit amet fermentum. Praesent commodo
+          |cursus magna, vel scelerisque nisl consectetur et.
+        p
+          |Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
+          |Aenean lacinia bibendum nulla sed consectetur. Curabitur blandit
+          |tempus porttitor. Nullam quis risus eget urna mollis ornare vel eu leo.
+          |Donec id elit non mi porta gravida at eget metus. Integer posuere erat
+          |a ante venenatis dapibus posuere velit aliquet.
+        p
+          |Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
+          |Vestibulum id ligula porta felis euismod semper. Sed posuere
+          |consectetur est at lobortis. Morbi leo risus, porta ac consectetur ac,
+          |vestibulum at eros. Aenean eu leo quam. Pellentesque ornare sem
+          |lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus
+          |commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
+          |amet risus.
+        p
+          |Aenean lacinia bibendum nulla sed consectetur. Lorem ipsum dolor sit
+          |amet, consectetur adipiscing elit. Donec ullamcorper nulla non metus
+          |auctor fringilla. Maecenas faucibus mollis interdum. Maecenas faucibus
+          |mollis interdum. Donec sed odio dui.
+        p
+          |Donec sed odio dui. Vestibulum id ligula porta felis euismod semper.
+          |Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
+          |Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque
+          |penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+          |Cras mattis consectetur purus sit amet fermentum. Praesent commodo
+          |cursus magna, vel scelerisque nisl consectetur et.
