--- a/jade/view_index.jade
+++ b/jade/view_index.jade
@@ -13,13 +13,11 @@ block content
         .well.sidebar-nav-affix-top
           ul.nav.nav-list
             li.nav-header List Header 1
-            li.active: a(href='#') Part 1
-            li: a(href='#') Part 2
-            ul.nav.nav-list
-              li.nav-header List 2 Header
-              li: a(href='#') Part B 1
-              li: a(href='#') Part B 2
+            li.active: a(href='#part1') Part 1
+            li: a(href='#part2') Part 2
       .span9
+        #part1
+        h3 Part1
         p
           |Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
           |Aenean lacinia bibendum nulla sed consectetur. Curabitur blandit
@@ -77,6 +75,8 @@ block content
           |tempus porttitor. Nullam quis risus eget urna mollis ornare vel eu leo.
           |Donec id elit non mi porta gravida at eget metus. Integer posuere erat
           |a ante venenatis dapibus posuere velit aliquet.
+        #part2
+        h3 Part 2
         p
           |Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
           |Vestibulum id ligula porta felis euismod semper. Sed posuere
