edit of asn 1 file

--- a/jade/view_assignment1.jade
+++ b/jade/view_assignment1.jade
@@ -15,8 +15,8 @@ block content
             li: a(href='#ack') Acknowledgements
             li: a(href='#download') Download Links
       .span10
-        #part1
-        h3 Part1
+        #overview
+        h3 Overview
         p
           |Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
           |Aenean lacinia bibendum nulla sed consectetur. Curabitur blandit
