--- a/jade/footer.jade
+++ b/jade/footer.jade
@@ -2,8 +2,8 @@
   .row-fluid
     .span9.offset1
       hr
-      .row-fluid
-        .span4.offset4
-          footer
-            span &copy; 2012 Douglas Edmonson
+      footer.text-center
+        |&copy; 2012 Douglas Edmonson &lt;
+        a(href='#') djedmonson@gmail.com
+        |&gt;
       hr
