--- a/jade/view_index.jade
+++ b/jade/view_index.jade
@@ -16,7 +16,7 @@ block content
             li.active: a(href='#part1') Part 1
             li: a(href='#part2') Part 2
       .span9
-        #part1
+        #part1.in-page-link
         h3 Part1
         p
           |Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
@@ -75,7 +75,7 @@ block content
           |tempus porttitor. Nullam quis risus eget urna mollis ornare vel eu leo.
           |Donec id elit non mi porta gravida at eget metus. Integer posuere erat
           |a ante venenatis dapibus posuere velit aliquet.
-        #part2
+        #part2.in-page-link
         h3 Part 2
         p
           |Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
@@ -103,6 +103,26 @@ block content
           |tempus porttitor. Nullam quis risus eget urna mollis ornare vel eu leo.
           |Donec id elit non mi porta gravida at eget metus. Integer posuere erat
           |a ante venenatis dapibus posuere velit aliquet.
+        p
+          |Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
+          |Vestibulum id ligula porta felis euismod semper. Sed posuere
+          |consectetur est at lobortis. Morbi leo risus, porta ac consectetur ac,
+          |vestibulum at eros. Aenean eu leo quam. Pellentesque ornare sem
+          |lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus
+          |commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
+          |amet risus.
+        p
+          |Aenean lacinia bibendum nulla sed consectetur. Lorem ipsum dolor sit
+          |amet, consectetur adipiscing elit. Donec ullamcorper nulla non metus
+          |auctor fringilla. Maecenas faucibus mollis interdum. Maecenas faucibus
+          |mollis interdum. Donec sed odio dui.
+        p
+          |Donec sed odio dui. Vestibulum id ligula porta felis euismod semper.
+          |Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
+          |Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque
+          |penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+          |Cras mattis consectetur purus sit amet fermentum. Praesent commodo
+          |cursus magna, vel scelerisque nisl consectetur et.
         p
           |Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
           |Vestibulum id ligula porta felis euismod semper. Sed posuere
