--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,16 @@
 body {
   padding-top: 60px;
 }
+
 .brand {
   font-family: Courier;
 }
 
 .text-center{
   text-align:center;<`2`>
+}
+
+.in-page-link{
+  padding-top:40px;
+  margin-top:-40px;
 }
