--- a/jade/view_index.jade
+++ b/jade/view_index.jade
@@ -5,76 +5,32 @@ block content
   include navbar
   include alerts
   .container-fluid
-    .hero-unit
-      h1 Welcome
-      p This site is for Clemsons CPSC X81 Android Development Course
     .row-fluid
-      .span3
+      .span10.offset1
+        .hero-unit
+          h1 Welcome
+          p This site is for Clemson's CPSC X81 Android Development Course
+    .row-fluid
+      .span2.offset1
         .well.sidebar-nav-affix-top
           ul.nav.nav-list
-            li.nav-header List Header 1
-            li.active: a(href='#part1') Part 1
+            li: a(href='#ref') Reference Links
             li: a(href='#part2') Part 2
-      .span9
-        #part1.in-page-link
-        h3 Part1
+      .span8
+        #ref.in-page-link
+        h3 Reference Links
+        h4= "Google Mobile Courses - "
+          a(href='http://goo.gl/F4HR2', target='_blank') Link
         p
-          |Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
-          |Aenean lacinia bibendum nulla sed consectetur. Curabitur blandit
-          |tempus porttitor. Nullam quis risus eget urna mollis ornare vel eu leo.
-          |Donec id elit non mi porta gravida at eget metus. Integer posuere erat
-          |a ante venenatis dapibus posuere velit aliquet.
+          |Google provides a set of courses, tutorials, and videos on android
+          |development. Each resource has a brief description that identifies
+          |the topics covered in the resource.
+        h4= "How to use Android Graphical Layout Tool - "
+          a(href='http://goo.gl/dpZu4', target='_blank') Link
         p
-          |Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
-          |Vestibulum id ligula porta felis euismod semper. Sed posuere
-          |consectetur est at lobortis. Morbi leo risus, porta ac consectetur ac,
-          |vestibulum at eros. Aenean eu leo quam. Pellentesque ornare sem
-          |lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus
-          |commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
-          |amet risus.
-        p
-          |Aenean lacinia bibendum nulla sed consectetur. Lorem ipsum dolor sit
-          |amet, consectetur adipiscing elit. Donec ullamcorper nulla non metus
-          |auctor fringilla. Maecenas faucibus mollis interdum. Maecenas faucibus
-          |mollis interdum. Donec sed odio dui.
-        p
-          |Donec sed odio dui. Vestibulum id ligula porta felis euismod semper.
-          |Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
-          |Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque
-          |penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-          |Cras mattis consectetur purus sit amet fermentum. Praesent commodo
-          |cursus magna, vel scelerisque nisl consectetur et.
-        p
-          |Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
-          |Aenean lacinia bibendum nulla sed consectetur. Curabitur blandit
-          |tempus porttitor. Nullam quis risus eget urna mollis ornare vel eu leo.
-          |Donec id elit non mi porta gravida at eget metus. Integer posuere erat
-          |a ante venenatis dapibus posuere velit aliquet.
-        p
-          |Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
-          |Vestibulum id ligula porta felis euismod semper. Sed posuere
-          |consectetur est at lobortis. Morbi leo risus, porta ac consectetur ac,
-          |vestibulum at eros. Aenean eu leo quam. Pellentesque ornare sem
-          |lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus
-          |commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
-          |amet risus.
-        p
-          |Aenean lacinia bibendum nulla sed consectetur. Lorem ipsum dolor sit
-          |amet, consectetur adipiscing elit. Donec ullamcorper nulla non metus
-          |auctor fringilla. Maecenas faucibus mollis interdum. Maecenas faucibus
-          |mollis interdum. Donec sed odio dui.
-        p
-          |Donec sed odio dui. Vestibulum id ligula porta felis euismod semper.
-          |Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
-          |Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque
-          |penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-          |Cras mattis consectetur purus sit amet fermentum. Praesent commodo
-          |cursus magna, vel scelerisque nisl consectetur et.p
-          |Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
-          |Aenean lacinia bibendum nulla sed consectetur. Curabitur blandit
-          |tempus porttitor. Nullam quis risus eget urna mollis ornare vel eu leo.
-          |Donec id elit non mi porta gravida at eget metus. Integer posuere erat
-          |a ante venenatis dapibus posuere velit aliquet.
+          |This page goes into detail about the graphical tool used to
+          |build layouts in eclipse. Gives examples for creating, editing,
+          |and modifying the layout with both the WYSIWYG view and the XML view.
         #part2.in-page-link
         h3 Part 2
         p
