Added google analytics code

--- a/jade/layout.jade
+++ b/jade/layout.jade
@@ -5,6 +5,7 @@ html
     link(rel='icon', type='image/png', href='http://dev.dedmonson.com/favicon.png')
     link(rel='stylesheet', href='./stylesheets/bootstrap.css')
     link(rel='stylesheet', href='./stylesheets/style.css')
+    script(src='./js/googleAnalytics.js')
   body
     block content
     include footer
