--- a/jade/view_index.jade
+++ b/jade/view_index.jade
@@ -15,7 +15,6 @@ block content
         .well.sidebar-nav-affix-top
           ul.nav.nav-list
             li: a(href='#ref') Reference Links
-            li: a(href='#part2') Part 2
       .span8
         #ref.in-page-link
         h3 Reference Links
@@ -31,71 +30,9 @@ block content
           |This page goes into detail about the graphical tool used to
           |build layouts in eclipse. Gives examples for creating, editing,
           |and modifying the layout with both the WYSIWYG view and the XML view.
-        #part2.in-page-link
-        h3 Part 2
+        h4= ""
+          a(href='http://goo.gl/g2UoC', target='_blank') Link
         p
-          |Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
-          |Vestibulum id ligula porta felis euismod semper. Sed posuere
-          |consectetur est at lobortis. Morbi leo risus, porta ac consectetur ac,
-          |vestibulum at eros. Aenean eu leo quam. Pellentesque ornare sem
-          |lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus
-          |commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
-          |amet risus.
-        p
-          |Aenean lacinia bibendum nulla sed consectetur. Lorem ipsum dolor sit
-          |amet, consectetur adipiscing elit. Donec ullamcorper nulla non metus
-          |auctor fringilla. Maecenas faucibus mollis interdum. Maecenas faucibus
-          |mollis interdum. Donec sed odio dui.
-        p
-          |Donec sed odio dui. Vestibulum id ligula porta felis euismod semper.
-          |Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
-          |Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque
-          |penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-          |Cras mattis consectetur purus sit amet fermentum. Praesent commodo
-          |cursus magna, vel scelerisque nisl consectetur et.
-        p
-          |Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
-          |Aenean lacinia bibendum nulla sed consectetur. Curabitur blandit
-          |tempus porttitor. Nullam quis risus eget urna mollis ornare vel eu leo.
-          |Donec id elit non mi porta gravida at eget metus. Integer posuere erat
-          |a ante venenatis dapibus posuere velit aliquet.
-        p
-          |Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
-          |Vestibulum id ligula porta felis euismod semper. Sed posuere
-          |consectetur est at lobortis. Morbi leo risus, porta ac consectetur ac,
-          |vestibulum at eros. Aenean eu leo quam. Pellentesque ornare sem
-          |lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus
-          |commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
-          |amet risus.
-        p
-          |Aenean lacinia bibendum nulla sed consectetur. Lorem ipsum dolor sit
-          |amet, consectetur adipiscing elit. Donec ullamcorper nulla non metus
-          |auctor fringilla. Maecenas faucibus mollis interdum. Maecenas faucibus
-          |mollis interdum. Donec sed odio dui.
-        p
-          |Donec sed odio dui. Vestibulum id ligula porta felis euismod semper.
-          |Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
-          |Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque
-          |penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-          |Cras mattis consectetur purus sit amet fermentum. Praesent commodo
-          |cursus magna, vel scelerisque nisl consectetur et.
-        p
-          |Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
-          |Vestibulum id ligula porta felis euismod semper. Sed posuere
-          |consectetur est at lobortis. Morbi leo risus, porta ac consectetur ac,
-          |vestibulum at eros. Aenean eu leo quam. Pellentesque ornare sem
-          |lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus
-          |commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit
-          |amet risus.
-        p
-          |Aenean lacinia bibendum nulla sed consectetur. Lorem ipsum dolor sit
-          |amet, consectetur adipiscing elit. Donec ullamcorper nulla non metus
-          |auctor fringilla. Maecenas faucibus mollis interdum. Maecenas faucibus
-          |mollis interdum. Donec sed odio dui.
-        p
-          |Donec sed odio dui. Vestibulum id ligula porta felis euismod semper.
-          |Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
-          |Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque
-          |penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-          |Cras mattis consectetur purus sit amet fermentum. Praesent commodo
-          |cursus magna, vel scelerisque nisl consectetur et.
+          |StackOverflow is an excellent resource for finding answers to any question
+          |you have about development. This link provides the Android tag and shows
+          |recent questions posted about android.
