--- a/jade/view_index.jade
+++ b/jade/view_index.jade
@@ -24,13 +24,19 @@ block content
           |Google provides a set of courses, tutorials, and videos on android
           |development. Each resource has a brief description that identifies
           |the topics covered in the resource.
+        h4= "Stanford Android Course - "
+          a(href='http://goo.gl/1Pj9o', target='_blank') Link
+        p
+          |This course goes over the basics of Android development as well as
+          |some more advanced topics. Is all text but is still very informative
+          |and has great examples.
         h4= "How to use Android Graphical Layout Tool - "
           a(href='http://goo.gl/dpZu4', target='_blank') Link
         p
           |This page goes into detail about the graphical tool used to
           |build layouts in eclipse. Gives examples for creating, editing,
           |and modifying the layout with both the WYSIWYG view and the XML view.
-        h4= ""
+        h4= "StackOverflow: Android Tag - "
           a(href='http://goo.gl/g2UoC', target='_blank') Link
         p
           |StackOverflow is an excellent resource for finding answers to any question
