--- a/jade/alerts.jade
+++ b/jade/alerts.jade
@@ -5,7 +5,7 @@
         button.alert-close-btn(type='button', class='close') &times;
         h4 Hold On!
         span That page is not avalible yet.
-  .row-fluid
+  .row-fluid(style='display: none')
     .span6.offset3
       .alert.fade.in.text-center
         strong Warning
