Added project to navbar

--- a/jade/navbar.jade
+++ b/jade/navbar.jade
@@ -24,6 +24,9 @@
                 //li(class=klass): a.pna(href='./assignment1.html') Assignment 1
                 -var klass = ( typeof(asn2) === 'undefined' ? '':'active')
                 //li(class=klass): a.pna(href='#') Assignment 2
+            -var klass = ( typeof(proj) === 'undefined' ? '':'active')
+            li(class=klass)
+              a.pna(href='#') Project
             -var klass = ( typeof(about) === 'undefined' ? '':'active')
             li(class=klass)
               a.pna(href='#') About
