Tweek copywite statment

--- a/jade/footer.jade
+++ b/jade/footer.jade
@@ -3,7 +3,7 @@
     .span9.offset1
       hr
       footer.text-center
-        |&copy; 2012 Douglas Edmonson &lt;
+        |&copy; 2012-2013 Douglas Edmonson &lt;
         a(href='#') djedmonson@gmail.com
         |&gt;
       hr
