--- a/jade/navbar.jade
+++ b/jade/navbar.jade
@@ -21,7 +21,7 @@
                 -var klass = ( typeof(asn0) === 'undefined' ? '':'active')
                 li(class=klass): a(href='./assignment0.html') Assignment 0
                 -var klass = ( typeof(asn1) === 'undefined' ? '':'active')
-                //li(class=klass): a.pna(href='./assignment1.html') Assignment 1
+                li(class=klass): a.pna(href='./assignment1.html') Assignment 1
                 -var klass = ( typeof(asn2) === 'undefined' ? '':'active')
                 //li(class=klass): a.pna(href='#') Assignment 2
             -var klass = ( typeof(proj) === 'undefined' ? '':'active')
