--- a/jade/view_index.jade
+++ b/jade/view_index.jade
@@ -18,9 +18,10 @@ block content
       .span8
         #ref.in-page-link
         h3 Reference Links
-        h4= "Filter out unexpectedvalue in logcat"
+        h4= "Filter out unexpectedvalue in logcat - "
+          a(href="http://stackoverflow.com/questions/13416142/unexpected-value-from-nativegetenabledtags-0",target='_blank') Link
         p
-          |Put this: ^(?!.*(nativeGetEnabledTags)).*$ in the filter field
+          |Put this ^(?!.*(nativeGetEnabledTags)).*$ in the filter field
         h4= "Google Mobile Courses - "
           a(href='http://goo.gl/F4HR2', target='_blank') Link
         p
