Added files for asn2 views and nav bar item

--- a/jade/navbar.jade
+++ b/jade/navbar.jade
@@ -21,9 +21,9 @@
                 -var klass = ( typeof(asn0) === 'undefined' ? '':'active')
                 li(class=klass): a(href='./assignment0.html') Assignment 0
                 -var klass = ( typeof(asn1) === 'undefined' ? '':'active')
-                li(class=klass): a.pna(href='./assignment1.html') Assignment 1
+                li(class=klass): a(href='./assignment1.html') Assignment 1
                 -var klass = ( typeof(asn2) === 'undefined' ? '':'active')
-                //li(class=klass): a.pna(href='#') Assignment 2
+                li(class=klass): a(href='./assignment2.html') Assignment 2
             -var klass = ( typeof(proj) === 'undefined' ? '':'active')
             li(class=klass)
               a.pna(href='#') Project
