Added api warning and version numbers

--- a/jade/view_assignment2.jade
+++ b/jade/view_assignment2.jade
@@ -9,7 +9,7 @@ block content
       .span10.offset1
         .hero-unit
           h1 Assignment 2
-          h2 SecureNote
+          h2 SecureNote v0.2
     .row-fluid
       .span2.offset1
         .well.sidebar-nav-affix-top
@@ -21,6 +21,9 @@ block content
             li: a(href='#download') Download Links
       .span8
         #overview.in-page-link
+          p.text-warning
+            strong= "Warning: "
+            |This application uses api v17, will crash on lower api versions!
           h3 Overview
           p
             |This application is the start to a secure note taking
