Added asn3 files and modified nav elements

--- a/jade/navbar.jade
+++ b/jade/navbar.jade
@@ -6,7 +6,7 @@
           span.icon-bar
           span.icon-bar
         a.brand(href='./') dedmons
-        .nav-collapse.navbar-responsive-collapse.collapse
+        .nav-collapse.nav-responsive-collapse.collapse
           ul.nav
             -var klass = ( typeof(home) === 'undefined' ? '':'active')
             li(class=klass)
