--- a/jade/view_assignment1.jade
+++ b/jade/view_assignment1.jade
@@ -12,9 +12,9 @@ block content
           h2 SecureNote v0.1
     .row-fluid
       .span2.offset1
-        .well.sidebar-nav-affix-top
+        .well.sidenav.affix(data-spy="affix", data-offset-top="260")
           ul.nav.nav-list
-            li.nav-header Hello World
+            li.nav-header Sections
             li: a(href='#overview') Overview
             li: a(href='#pics') Screen Shots
             li: a(href='#ack') Acknowledgements
