--- a/jade/view_index.jade
+++ b/jade/view_index.jade
@@ -12,7 +12,7 @@ block content
           p This site is for Clemson's CPSC X81 Android Development Course
     .row-fluid
       .span2.offset1
-        .well.sidebar-nav-affix-top
+        .well(data-spy="affix", data-offset-top="200")
           ul.nav.nav-list
             li: a(href='#ref') Reference Links
       .span8
