Added and modified files for asn3

--- a/jade/navbar.jade
+++ b/jade/navbar.jade
@@ -24,6 +24,8 @@
                 li(class=klass): a(href='./assignment1.html') Assignment 1
                 -var klass = ( typeof(asn2) === 'undefined' ? '':'active')
                 li(class=klass): a(href='./assignment2.html') Assignment 2
+                -var klass = ( typeof(asn3) === 'undefined' ? '':'active')
+                li(class=klass): a(href='./assignment3.html') Assignment 3
             -var klass = ( typeof(proj) === 'undefined' ? '':'active')
             li(class=klass)
               a.pna(href='#') Project
