--- a/jade/view_assignment0.jade
+++ b/jade/view_assignment0.jade
@@ -14,7 +14,7 @@ block content
       .span2.offset1
         .well.sidebar-nav-affix-top
           ul.nav.nav-list
-            li.nav-header Hello World
+            li.nav-header Sections
             li: a(href='#overview') Overview
             li: a(href='#pics') Screen Shots
             li: a(href='#ack') Acknowledgements
