Added updated archive to views

--- a/jade/view_assignment3.jade
+++ b/jade/view_assignment3.jade
@@ -87,6 +87,8 @@ block content
           h3 Download Links
           ul
             li
+              a(href='./assets/dedmons.assignment3-update.tar.gz') Updated Archive
+            li
               a(href='./assets/dedmons.assignment3.tar.gz') Tarball Archive
               p= "Open with "
                 code tar -xzvf dedmons.assignment3.tar.gz
