Added a line for asn4

--- a/jade/view_assignment4.jade
+++ b/jade/view_assignment4.jade
@@ -45,6 +45,8 @@ block content
           p
             |The server uses codeigniter to create a rest interface, and all communication
             |is done via JSON and HTTP requests.
+          p
+            |Final new feature is parsing of json on the client side.
         #pics.in-page-link
           h3 Screen Shots
           p No UI changes this time so screen shots are the same
