--- a/jade/layout.jade
+++ b/jade/layout.jade
@@ -12,3 +12,18 @@ html
     script(src='http://code.jquery.com/jquery-1.8.3.min.js')
     script(src='./js/bootstrap.js')
     script(src='./js/site.js')
+    // Piwik code
+    script(type='text/javascript').
+      var _paq = _paq || [];
+      _paq.push(['trackPageView']);
+      _paq.push(['enableLinkTracking']);
+      (function() {
+        var u=(("https:" == document.location.protocol) ? "https" : "http") + "://analytics.dedmonson.com//";
+        _paq.push(['setTrackerUrl', u+'piwik.php']);
+        _paq.push(['setSiteId', 1]);
+        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; g.type='text/javascript';
+        g.defer=true; g.async=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+      })();
+    noscript
+      p
+        img(src='http://analytics.dedmonson.com/piwik.php?idsite=1', style='border:0', alt='')
